unpackaged/main/default/objects/EBH_DealSlotAllocation__c/EBH_DealSlotAllocation__c.object-meta.xml
<CustomObject>
    <description>[EBH] (EPH-3291) - Deal Slot Allocation</description>
    <label>Deal Slot Allocation</label>
    <nameField>
        <displayFormat>DSA-{0000000000}</displayFormat>
        <label>Deal Slot Allocations ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Slot Allocations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>