unpackaged/main/default/objects/EBH_DealSlotAllocation__c/fields/EBH_AcceptProposalsEnd__c.field-meta.xml
<CustomField>
    <fullName>EBH_AcceptProposalsEnd__c</fullName>
    <label>Accept Proposals End Date</label>
    <type>Date</type>
</CustomField>