unpackaged/main/default/objects/EBH_DealSlotAllocation__c/fields/EBH_AcceptProposalsStart__c.field-meta.xml
<CustomField>
    <fullName>EBH_AcceptProposalsStart__c</fullName>
    <label>Accept Proposals Start Date</label>
    <type>Date</type>
</CustomField>