unpackaged/main/default/objects/EBH_DealSlotAllocation__c/fields/EBH_Country__c.field-meta.xml
<CustomField>
    <fullName>EBH_Country__c</fullName>
    <description>[EBH] (EPH-4169) - Country</description>
    <label>Deal Site</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>77</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>71</fullName>
            </value>
            <value>
                <fullName>101</fullName>
            </value>
            <value>
                <fullName>186</fullName>
            </value>
            <value>
                <fullName>17</fullName>
                <label>AU</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>