unpackaged/main/default/objects/EBH_DealSlotAllocation__c/fields/EBH_Date__c.field-meta.xml
<CustomField>
    <fullName>EBH_Date__c</fullName>
    <description>[EBH] (EPH-4169) - Date</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>