unpackaged/main/default/objects/EBH_DealSlotAllocation__c/fields/EBH_DealSlotDisabled__c.field-meta.xml
<CustomField>
    <fullName>EBH_DealSlotDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deal Slot Disabled</label>
    <type>Checkbox</type>
</CustomField>