unpackaged/main/default/objects/EBH_DealSlotAllocation__c/fields/EBH_DealTitle__c.field-meta.xml
<CustomField>
    <fullName>EBH_DealTitle__c</fullName>
    <label>Deal Slot Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>