unpackaged/main/default/objects/EBH_DealSlotAllocation__c/fields/EBH_Description__c.field-meta.xml
<CustomField>
    <fullName>EBH_Description__c</fullName>
    <label>Deal Slot Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>