unpackaged/main/default/objects/EBH_DealSlotAllocation__c/fields/EBH_Month__c.field-meta.xml
<CustomField>
    <fullName>EBH_Month__c</fullName>
    <description>[EBH] (EPH-4169) - Month</description>
    <label>Month</label>
    <type>Date</type>
</CustomField>