unpackaged/main/default/objects/EBH_DealSlotAllocation__c/fields/EBH_OpenSeatsAvailable__c.field-meta.xml
<CustomField>
    <fullName>EBH_OpenSeatsAvailable__c</fullName>
    <label>Open Slots Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>