unpackaged/main/default/objects/EBH_DealSlotAllocation__c/fields/EBH_Slots__c.field-meta.xml
<CustomField>
    <fullName>EBH_Slots__c</fullName>
    <description>[EBH] (EPH-4169) - Slots</description>
    <label>Slots</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>