unpackaged/main/default/objects/EBH_DealSlotAllocation__c/fields/EBH_UID__c.field-meta.xml
<CustomField>
    <fullName>EBH_UID__c</fullName>
    <description>[EBH] (EPH-) - UID</description>
    <formula>TEXT(EBH_DealFormat__c) &amp; TEXT(EBH_Vertical__c) &amp; TEXT(EBH_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UID</label>
    <type>Text</type>
</CustomField>