unpackaged/main/default/objects/EBH_DealSlotAllocation__c/fields/EBH_Vertical__c.field-meta.xml
<CustomField>
    <fullName>EBH_Vertical__c</fullName>
    <description>[EBH] (EPH-4169) - Vertical</description>
    <label>Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>EBH_Country__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Soft Home</fullName>
            </value>
            <value>
                <fullName>Hard Home</fullName>
            </value>
            <value>
                <fullName>Fashion</fullName>
            </value>
            <value>
                <fullName>Parts</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>P&amp;A</fullName>
            </value>
            <value>
                <fullName>Health &amp; Beauty</fullName>
            </value>
            <value>
                <fullName>Electronics</fullName>
            </value>
            <value>
                <fullName>Home &amp; Garden</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Sports &amp; Leisure</fullName>
            </value>
            <value>
                <fullName>Lifestyle</fullName>
            </value>
            <value>
                <fullName>Business &amp; Industrial</fullName>
            </value>
            <value>
                <fullName>Fitness</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Joyería y Belleza</fullName>
            </value>
            <value>
                <fullName>Electrónica</fullName>
            </value>
            <value>
                <fullName>Moda</fullName>
            </value>
            <value>
                <fullName>Casa y Jardín</fullName>
            </value>
            <value>
                <fullName>Ocio</fullName>
            </value>
            <value>
                <fullName>Deportes</fullName>
            </value>
            <value>
                <fullName>Motor</fullName>
            </value>
            <value>
                <fullName>Coleccionismo</fullName>
            </value>
            <value>
                <fullName>Otras categorías</fullName>
            </value>
            <value>
                <fullName>High-Tech</fullName>
            </value>
            <value>
                <fullName>Mode</fullName>
            </value>
            <value>
                <fullName>Maison &amp; Jardin</fullName>
            </value>
            <value>
                <fullName>Auto et Moto</fullName>
            </value>
            <value>
                <fullName>Collections &amp; Antiquités</fullName>
            </value>
            <value>
                <fullName>Collectibles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>