unpackaged/main/default/objects/EBH_DealSlotAllocation__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>US-0006486 Deals - Masterschedule - Batch Process for Deals Slot Record Creation</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>