unpackaged/main/default/objects/EBH_DealSlotAllocation__c/fields/Open_Slots_Available__c.field-meta.xml
<CustomField>
    <fullName>Open_Slots_Available__c</fullName>
    <label>Open Slots Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>