unpackaged/main/default/objects/EBH_DealSlotAllocation__c/fields/System_Created__c.field-meta.xml
<CustomField>
    <fullName>System_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0006486 - Masterschedule - Batch Process for Deals Slot Record Creation</description>
    <label>System Created</label>
    <type>Checkbox</type>
</CustomField>