unpackaged/main/default/objects/EBH_DealSlotAllocation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EBH_Date__c</columns>
    <columns>EBH_Country__c</columns>
    <columns>EBH_Vertical__c</columns>
    <columns>EBH_Slots__c</columns>
    <columns>EBH_DealFormat__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EBH_Country__c</field>
        <operation>equals</operation>
        <value>3,UK</value>
    </filters>
    <label>All</label>
</ListView>